# flight-safety-system

./: .dockerignore  .gitignore  Makefile  Makefile.am  README.md  client.cpp  configure.ac  db.cpp  docker-compose.yaml  fss-client  fss-internal.hpp  fss-server.hpp  fss-server.service  fss.hpp  server-db.h  server-db.pgc  server.cpp  transport-helpers.cpp  transport-messages.cpp  transport.cpp  transport.hpp
.github/workflows/: c-cpp.yml  clangsa.yml  codeql-analysis.yml  cppcheck.yml
certs/: .gitignore  generate-ca.sh  generate-client.sh  generate-server.sh
debian/: changelog  control  flight-safety-system-server.install  libfss-client-ssl.install  libfss-client.install  libfss-transport-ssl.install  libfss-transport.install  libfss.install  rules
docker/: fss-server.Dockerfile  start-server.sh
examples/: .gitignore  Makefile.am  client.json  example-client-config.json  fake_client.cpp  fss-server.service.in  server.json
src/: .gitignore  Makefile.am  client-ssl.cpp  client.cpp  db.cpp  fss-client-ssl.hpp  fss-client-ssl.pc.in  fss-client.hpp  fss-client.pc.in  fss-internal.hpp  fss-main.cpp  fss-server.hpp  fss-transport-ssl.hpp  fss-transport-ssl.pc.in  fss-transport.hpp  fss-transport.pc.in  fss.hpp  fss.pc.in  server-db.h  server-db.pgc  server.cpp  transport-helpers.cpp  transport-messages.cpp  transport-ssl.cpp  transport.cpp  transport.hpp
tests/: .gitignore  Makefile.am  client.cpp  connection-ssl.cpp  connection.cpp  main.cpp  messages.cpp
